ci: add Docker image build and push to GHCR on release
Add docker_chatcli and docker_operator jobs to the release workflow.
Both images are built multi-arch (amd64/arm64) via QEMU+Buildx and
pushed to ghcr.io/diillson/chatcli and ghcr.io/diillson/chatcli-operator
with version tag + latest.

Update Helm values default to ghcr.io/diillson/chatcli, fix operator
Dockerfile to use TARGETARCH for multi-arch builds, and add GHCR
section to deployment docs.

--- a/operator/Dockerfile
+++ b/operator/Dockerfile
@@ -11,8 +11,9 @@ COPY main.go main.go
 COPY api/ api/
 COPY controllers/ controllers/
 
-# Build
-RUN CGO_ENABLED=0 GOOS=linux GOARCH=amd64 go build -a -o manager main.go
+# Build (TARGETARCH is injected by docker buildx for multi-arch)
+ARG TARGETARCH
+RUN CGO_ENABLED=0 GOOS=linux GOARCH=${TARGETARCH} go build -a -o manager main.go
 
 # Runtime
 FROM gcr.io/distroless/static:nonroot
