--- a/deploy/helm/chatcli/values.yaml
+++ b/deploy/helm/chatcli/values.yaml
@@ -3,7 +3,7 @@
 replicaCount: 1
 
 image:
-  repository: chatcli
+  repository: ghcr.io/diillson/chatcli
   tag: latest
   pullPolicy: IfNotPresent
 
