feat(observability): add Prometheus metrics for server, LLM, watcher, session, and operator
Instrument the entire ChatCLI stack with Prometheus metrics for
production-ready observability:

- metrics/ package: custom Registry, HTTP server (:9090/metrics),
  gRPC interceptors (unary+stream), LLM/session/watcher/server metrics
- InstrumentedClient decorator wraps LLM calls with latency, error
  classification (rate_limit, timeout, auth_error, server_error)
- K8s watcher: collection duration, pod ready/desired gauges, alert
  counters, snapshot and restart tracking via WatcherMetricsRecorder
- Operator: reconciliation counter/histogram, managed instances gauge,
  instance_ready per-CR gauge via controller-runtime registry
- CLI /metrics command: runtime telemetry (provider, tokens, memory,
  goroutines, connection status, watcher) displayed in terminal
- Server: --metrics-port flag (default 9090, env CHATCLI_METRICS_PORT)
- Helm: metricsPort in values/deployment/service, ServiceMonitor template
- CRD: server.metricsPort field (default 9090) with container+service ports
- 30+ Prometheus metrics across 6 subsystems (grpc, llm, watcher, session,
  server, operator) plus Go runtime collectors

--- a/deploy/helm/chatcli/templates/service.yaml
+++ b/deploy/helm/chatcli/templates/service.yaml
@@ -11,5 +11,11 @@ spec:
       targetPort: grpc
       protocol: TCP
       name: grpc
+    {{- if .Values.server.metricsPort }}
+    - port: {{ .Values.server.metricsPort }}
+      targetPort: metrics
+      protocol: TCP
+      name: metrics
+    {{- end }}
   selector:
     {{- include "chatcli.selectorLabels" . | nindent 4 }}
