--- a/deploy/helm/chatcli/templates/deployment.yaml
+++ b/deploy/helm/chatcli/templates/deployment.yaml
@@ -34,6 +34,9 @@ spec:
           command: ["chatcli", "serve"]
           args:
             - "--port={{ .Values.server.port }}"
+            {{- if .Values.server.metricsPort }}
+            - "--metrics-port={{ .Values.server.metricsPort }}"
+            {{- end }}
             {{- if .Values.llm.provider }}
             - "--provider={{ .Values.llm.provider }}"
             {{- end }}
@@ -57,6 +60,11 @@ spec:
             - name: grpc
               containerPort: {{ .Values.server.port }}
               protocol: TCP
+            {{- if .Values.server.metricsPort }}
+            - name: metrics
+              containerPort: {{ .Values.server.metricsPort }}
+              protocol: TCP
+            {{- end }}
           envFrom:
             - configMapRef:
                 name: {{ include "chatcli.fullname" . }}
