feat(operator): add AIOps platform with autonomous remediation
Implement full AIOps Kubernetes operator with 6 CRDs (Instance, Anomaly,
Issue, AIInsight, RemediationPlan, Runbook) under the new API group
platform.chatcli.io. The operator detects anomalies via the server's K8s
watcher (gRPC bridge), correlates signals into Issues, requests AI
analysis through the AnalyzeIssue RPC, and creates RemediationPlans
autonomously from AI-suggested actions when no manual Runbook exists.

Key changes:
- Migrate API group from chatcli.diillson.com to platform.chatcli.io
- Add 5 new CRDs with full state-machine lifecycle controllers
- Add correlation engine with risk scoring and severity classification
- Add gRPC client and WatcherBridge for server↔operator integration
- Add GetAlerts and AnalyzeIssue RPCs with structured action responses
- Add AI-generated remediation fallback (no external dependencies)
- Add 80 tests covering all controllers and E2E pipeline flows

--- a/operator/config/samples/platform_v1alpha1_instance.yaml
+++ b/operator/config/samples/platform_v1alpha1_instance.yaml
@@ -1,5 +1,5 @@
-apiVersion: chatcli.diillson.com/v1alpha1
-kind: ChatCLIInstance
+apiVersion: platform.chatcli.io/v1alpha1
+kind: Instance
 metadata:
   name: chatcli-sample
   namespace: default
@@ -55,7 +55,7 @@ spec:
   apiKeys:
     name: chatcli-api-keys
 ---
-# Secret with API keys (create before applying the ChatCLIInstance)
+# Secret with API keys (create before applying the Instance)
 apiVersion: v1
 kind: Secret
 metadata:
