feat(operator): add TLS and token auth support for server communication
Add secure gRPC communication between the operator and ChatCLI server
by reading TLS certificates and authentication tokens from Kubernetes
Secrets referenced in the Instance CR.

- Refactor ServerClient.Connect() to accept ConnectionOpts (TLS, CA cert, token)
- Add withAuth() to inject Bearer token in gRPC metadata on every RPC
- WatcherBridge reads TLS and token Secrets from Instance spec before connecting
- Fix operator Dockerfile for replace directive (context must be repo root)
- Add TARGETARCH to main Dockerfile for native cross-compilation
- Add .dockerignore to reduce build context size
- Update CI pipeline operator context from ./operator to .
- Add 14 new tests (86 total): withAuth, ConnectionOpts, buildConnectionOpts

--- a/operator/Dockerfile
+++ b/operator/Dockerfile
@@ -1,24 +1,35 @@
+# ChatCLI Operator - Multi-stage Docker build
+# Must be built from the repo root: docker build -f operator/Dockerfile .
+# This is required because go.mod uses: replace github.com/diillson/chatcli => ../
+
 FROM golang:1.25 AS builder
 
 WORKDIR /workspace
 
-# Cache dependencies
+# Copy root module files (needed for replace directive)
 COPY go.mod go.sum ./
+
+# Copy operator module files and download dependencies (maximizes layer caching)
+COPY operator/go.mod operator/go.sum ./operator/
+WORKDIR /workspace/operator
 RUN go mod download
 
-# Copy source
-COPY main.go main.go
-COPY api/ api/
-COPY controllers/ controllers/
+# Copy source needed by the operator
+WORKDIR /workspace
+COPY proto/ proto/
+COPY operator/main.go operator/main.go
+COPY operator/api/ operator/api/
+COPY operator/controllers/ operator/controllers/
 
 # Build (TARGETARCH is injected by docker buildx for multi-arch)
+WORKDIR /workspace/operator
 ARG TARGETARCH
 RUN CGO_ENABLED=0 GOOS=linux GOARCH=${TARGETARCH} go build -a -o manager main.go
 
 # Runtime
 FROM gcr.io/distroless/static:nonroot
 WORKDIR /
-COPY --from=builder /workspace/manager .
+COPY --from=builder /workspace/operator/manager .
 USER 65532:65532
 
 ENTRYPOINT ["/manager"]
