fix(operator): correct CRD enums, RBAC permissions and anomaly traceability
- Add missing signalType enum values (pod_not_ready, deploy_failing) and
  source value (watcher) to Anomaly CRD YAML
- Add Secrets, Pods, pods/log read permissions and Events get/list/watch
  to operator ClusterRole for TLS/token reading and watcher functionality
- Add Instance tracking labels on Anomaly CRs created by WatcherBridge
  (cross-namespace link since OwnerReferences don't work across namespaces)
- Update test count from 80 to 86 (115 with subtests) across all docs
- Add TLS/token fields to Instance example in operator README
- Document operator Docker build context requirement (must use repo root)
- Add operator image build instructions to docker-deployment docs

--- a/operator/config/crd/bases/platform.chatcli.io_anomalies.yaml
+++ b/operator/config/crd/bases/platform.chatcli.io_anomalies.yaml
@@ -62,6 +62,7 @@ spec:
                     - events
                     - logs
                     - webhook
+                    - watcher
                 signalType:
                   description: Type of anomaly signal detected.
                   type: string
@@ -72,6 +73,8 @@ spec:
                     - cpu_high
                     - memory_high
                     - oom_kill
+                    - pod_not_ready
+                    - deploy_failing
                 resource:
                   description: Reference to the Kubernetes resource affected.
                   type: object
