feat(operator): AIOps platform with autonomous remediation (#557)
* feat(operator): add AIOps platform with autonomous remediation

Implement full AIOps Kubernetes operator with 6 CRDs (Instance, Anomaly,
Issue, AIInsight, RemediationPlan, Runbook) under the new API group
platform.chatcli.io. The operator detects anomalies via the server's K8s
watcher (gRPC bridge), correlates signals into Issues, requests AI
analysis through the AnalyzeIssue RPC, and creates RemediationPlans
autonomously from AI-suggested actions when no manual Runbook exists.

Key changes:
- Migrate API group from chatcli.diillson.com to platform.chatcli.io
- Add 5 new CRDs with full state-machine lifecycle controllers
- Add correlation engine with risk scoring and severity classification
- Add gRPC client and WatcherBridge for server↔operator integration
- Add GetAlerts and AnalyzeIssue RPCs with structured action responses
- Add AI-generated remediation fallback (no external dependencies)
- Add 80 tests covering all controllers and E2E pipeline flows

* docs: add comprehensive AIOps platform documentation

Update all READMEs and GitHub Pages documentation to cover the new
AIOps platform with 6 CRDs, autonomous pipeline, AI-generated
remediation, and server-operator integration.

Changes:
- Rewrite operator/README.md with full architecture and CRD reference
- Update README.md and README_EN.md K8s Operator and code structure sections
- Rewrite ghpages k8s-operator.md with Mermaid diagrams and all CRD specs
- Create new ghpages aiops-platform.md deep-dive (sequence diagrams,
  correlation engine, state machine, ownership, internal components)
- Update ghpages server-mode.md with GetAlerts and AnalyzeIssue RPCs
- Update ghpages k8s-watcher.md with AIOps integration section
- Update ghpages cookbook k8s-monitoring.md with AIOps autonomous workflow
- Update ghpages features _index.md description

* feat(operator): add TLS and token auth support for server communication

Add secure gRPC communication b

--- a/operator/config/rbac/role.yaml
+++ b/operator/config/rbac/role.yaml
@@ -11,11 +11,11 @@ kind: ClusterRole
 metadata:
   name: chatcli-operator-manager
 rules:
-  # ChatCLIInstance CRD
+  # Instance CRD
   - apiGroups:
-      - chatcli.diillson.com
+      - platform.chatcli.io
     resources:
-      - chatcliinstances
+      - instances
     verbs:
       - get
       - list
@@ -25,20 +25,109 @@ rules:
       - patch
       - delete
   - apiGroups:
-      - chatcli.diillson.com
+      - platform.chatcli.io
     resources:
-      - chatcliinstances/status
+      - instances/status
+      - instances/finalizers
     verbs:
       - get
       - update
       - patch
+  # Issue CRD
   - apiGroups:
-      - chatcli.diillson.com
+      - platform.chatcli.io
     resources:
-      - chatcliinstances/finalizers
+      - issues
     verbs:
+      - get
+      - list
+      - watch
+      - create
       - update
-  # Owned resources
+      - patch
+      - delete
+  - apiGroups:
+      - platform.chatcli.io
+    resources:
+      - issues/status
+      - issues/finalizers
+    verbs:
+      - get
+      - update
+      - patch
+  # RemediationPlan CRD
+  - apiGroups:
+      - platform.chatcli.io
+    resources:
+      - remediationplans
+    verbs:
+      - get
+      - list
+      - watch
+      - create
+      - update
+      - patch
+      - delete
+  - apiGroups:
+      - platform.chatcli.io
+    resources:
+      - remediationplans/status
+    verbs:
+      - get
+      - update
+      - patch
+  # Anomaly CRD
+  - apiGroups:
+      - platform.chatcli.io
+    resources:
+      - anomalies
+    verbs:
+      - get
+      - list
+      - watch
+      - create
+      - update
+      - patch
+      - delete
+  - apiGroups:
+      - platform.chatcli.io
+    resources:
+      - anomalies/status
+    verbs:
+      - get
+      - update
+      - patch
+  # Runbook CRD (read-only for controllers, no status)
+  - apiGroups:
+      - platform.chatcli.io
+    resources:
+      - runbooks
+    verbs:
+      - get
+      - list
+      - watch
+  # AIInsight CRD
+  - apiGroups:
+      - platform.chatcli.io
+    resources:
+      - aiinsights
+    verbs:
+      - get
+      - list
+      - watch
+      - create
+      - update
+      - patch
+      - delete
+  - apiGroups:
+      - platform.chatcli.io
+    resources:
+      - aiinsights/status
+    verbs:
+      - get
+      - update
+      - patch
+  # Owned resources (Instance controller)
   - apiGroups:
       - apps
     resources:
@@ -51,11 +140,19 @@ rules:
       - update
       - patch
       - delete
+  # ReplicaSets (for rollback inspection)
+  - apiGroups:
+      - apps
+    resources:
+      - replicasets
+    verbs:
+      - get
+      - list
+      - watch
   - apiGroups:
       - ""
     resources:
       - services
-      - configmaps
       - serviceaccounts
       - persistentvolumeclaims
     verbs:
@@ -66,6 +163,37 @@ rules:
       - update
       - patch
       - delete
+  # Secrets (API keys, TLS certs, auth tokens)
+  - apiGroups:
+      - ""
+    resources:
+      - secrets
+    verbs:
+      - get
+      - list
+      - watch
+  # Pods and logs (watcher, remediation restart)
+  - apiGroups:
+      - ""
+    resources:
+      - pods
+      - pods/log
+    verbs:
+      - get
+      - list
+      - watch
+  # ConfigMaps — no delete for remediation safety
+  - apiGroups:
+      - ""
+    resources:
+      - configmaps
+    verbs:
+      - get
+      - list
+      - watch
+      - create
+      - update
+      - patch
   - apiGroups:
       - rbac.authorization.k8s.io
     resources:
@@ -81,12 +209,15 @@ rules:
       - update
       - patch
       - delete
-  # Events
+  # Events (emit + read for watcher)
   - apiGroups:
       - ""
     resources:
       - events
     verbs:
+      - get
+      - list
+      - watch
       - create
       - patch
   # Leader election
