feat(grpc): add keepalive, round-robin LB and headless Service for multi-replica support
gRPC over HTTP/2 multiplexes all RPCs on a single persistent TCP connection,
causing kube-proxy to pin traffic to one pod — making extra replicas idle.

This adds:
- Keepalive (10s ping / 3s timeout) to both operator and CLI clients for
  fast dead-connection detection
- dns:/// resolver + round_robin service config for client-side load balancing
- Automatic headless Service (ClusterIP: None) in operator when replicas > 1,
  with safe delete-and-recreate to handle ClusterIP immutability
- Configurable service.headless flag in Helm chart values for the same purpose

--- a/deploy/helm/chatcli/values.yaml
+++ b/deploy/helm/chatcli/values.yaml
@@ -100,6 +100,11 @@ rbac:
 service:
   type: ClusterIP
   port: 50051
+  # Enable headless Service for gRPC client-side load balancing with multiple replicas.
+  # When true, DNS returns individual pod IPs instead of a virtual IP,
+  # allowing gRPC round-robin distribution across all pods.
+  # Recommended when replicaCount > 1.
+  headless: false
 
 ingress:
   enabled: false
