fix(operator): resolve RBAC escalation, readonly fs, gRPC keepalive, CRD schema and naming bugs
- Add missing RBAC permissions (endpoints, statefulsets, daemonsets, HPA,
  ingresses, metrics) to operator ClusterRole so it can grant them via
  watcher ClusterRoles without triggering escalation prevention
- Set HOME=/home/chatcli env var and add writable emptyDir volume at
  /home/chatcli/.chatcli for log and plugin data on readOnlyRootFilesystem
- Configure gRPC server keepalive EnforcementPolicy (MinTime=20s) and
  increase client ping interval from 10s to 30s to prevent ENHANCE_YOUR_CALM
  disconnects
- Add watch-config-hash annotation to PodTemplate so ConfigMap changes
  trigger automatic rolling updates
- Replace underscores with hyphens in Issue names generated by the anomaly
  controller to comply with RFC 1123 subdomain naming
- Add missing 'watcher' enum value to Issue CRD source field
- Add missing suggestedActions schema to AIInsight CRD status

--- a/operator/config/crd/bases/platform.chatcli.io_aiinsights.yaml
+++ b/operator/config/crd/bases/platform.chatcli.io_aiinsights.yaml
@@ -82,6 +82,29 @@ spec:
                   type: array
                   items:
                     type: string
+                suggestedActions:
+                  description: Concrete remediation actions suggested by the AI.
+                  type: array
+                  items:
+                    type: object
+                    required:
+                      - name
+                      - action
+                    properties:
+                      name:
+                        description: Human-readable step name.
+                        type: string
+                      action:
+                        description: Remediation action type.
+                        type: string
+                      description:
+                        description: Why this action is recommended.
+                        type: string
+                      params:
+                        description: Action-specific parameters.
+                        type: object
+                        additionalProperties:
+                          type: string
                 generatedAt:
                   description: Timestamp when the insight was generated.
                   type: string
