--- a/operator/config/crd/bases/platform.chatcli.io_issues.yaml
+++ b/operator/config/crd/bases/platform.chatcli.io_issues.yaml
@@ -69,6 +69,7 @@ spec:
                     - events
                     - logs
                     - webhook
+                    - watcher
                 resource:
                   description: Reference to the Kubernetes resource affected.
                   type: object
