--- a/deploy/helm/chatcli/templates/deployment.yaml
+++ b/deploy/helm/chatcli/templates/deployment.yaml
@@ -70,8 +70,10 @@ spec:
                 name: {{ include "chatcli.fullname" . }}
             - secretRef:
                 name: {{ include "chatcli.secretName" . }}
-          {{- with .Values.extraEnv }}
           env:
+            - name: HOME
+              value: /home/chatcli
+          {{- with .Values.extraEnv }}
             {{- toYaml . | nindent 12 }}
           {{- end }}
           {{- $mounts := list }}
@@ -86,6 +88,7 @@ spec:
           {{- end }}
           {{- if and .Values.securityContext .Values.securityContext.readOnlyRootFilesystem }}
           {{- $mounts = append $mounts (dict "name" "tmp" "mountPath" "/tmp") }}
+          {{- $mounts = append $mounts (dict "name" "data" "mountPath" "/home/chatcli/.chatcli") }}
           {{- end }}
           {{- if $mounts }}
           volumeMounts:
@@ -124,6 +127,9 @@ spec:
         - name: tmp
           emptyDir:
             sizeLimit: 100Mi
+        - name: data
+          emptyDir:
+            sizeLimit: 200Mi
         {{- end }}
       {{- end }}
       {{- with .Values.nodeSelector }}
