fix(operator): ensure namespace exists before ServiceAccount and Instance
Move Namespace definition from manager.yaml to role.yaml so it is
created before the ServiceAccount that references it. Without this,
`make deploy` on a fresh cluster fails because chatcli-system does
not exist when role.yaml is applied.

Also update sample Instance YAML with correct resource ordering
(Namespace → Secret → Instance) so a single kubectl apply works.

--- a/operator/config/rbac/role.yaml
+++ b/operator/config/rbac/role.yaml
@@ -1,4 +1,12 @@
 apiVersion: v1
+kind: Namespace
+metadata:
+  name: chatcli-system
+  labels:
+    app.kubernetes.io/name: chatcli-operator
+    app.kubernetes.io/managed-by: kustomize
+---
+apiVersion: v1
 kind: ServiceAccount
 metadata:
   name: chatcli-operator
