--- a/deploy/helm/chatcli/templates/deployment.yaml
+++ b/deploy/helm/chatcli/templates/deployment.yaml
@@ -68,8 +68,10 @@ spec:
           envFrom:
             - configMapRef:
                 name: {{ include "chatcli.fullname" . }}
+                optional: true
             - secretRef:
                 name: {{ include "chatcli.secretName" . }}
+                optional: true
           env:
             - name: HOME
               value: /home/chatcli
