fix(operator): resolve RBAC escalation, readonly fs, gRPC keepalive, CRD schema and naming bugs    (#561)
* fix(operator): resolve RBAC escalation, readonly fs, gRPC keepalive, CRD schema and naming bugs

- Add missing RBAC permissions (endpoints, statefulsets, daemonsets, HPA,
  ingresses, metrics) to operator ClusterRole so it can grant them via
  watcher ClusterRoles without triggering escalation prevention
- Set HOME=/home/chatcli env var and add writable emptyDir volume at
  /home/chatcli/.chatcli for log and plugin data on readOnlyRootFilesystem
- Configure gRPC server keepalive EnforcementPolicy (MinTime=20s) and
  increase client ping interval from 10s to 30s to prevent ENHANCE_YOUR_CALM
  disconnects
- Add watch-config-hash annotation to PodTemplate so ConfigMap changes
  trigger automatic rolling updates
- Replace underscores with hyphens in Issue names generated by the anomaly
  controller to comply with RFC 1123 subdomain naming
- Add missing 'watcher' enum value to Issue CRD source field
- Add missing suggestedActions schema to AIInsight CRD status

* fix(operator): deduplicate watcher anomalies for ongoing problems

Remove time bucket (minute-based) from alert dedup hash so the same
ongoing problem (e.g. CrashLoopBackOff) creates a single Anomaly CR
instead of one per poll cycle (~1/min). The DedupTTL of 2h ensures
a fresh Anomaly is created if the problem resolves and recurs later.

* fix(operator): ensure namespace exists before ServiceAccount and Instance

Move Namespace definition from manager.yaml to role.yaml so it is
created before the ServiceAccount that references it. Without this,
`make deploy` on a fresh cluster fails because chatcli-system does
not exist when role.yaml is applied.

Also update sample Instance YAML with correct resource ordering
(Namespace → Secret → Instance) so a single kubectl apply works.

* fix(operator): auto-rollout on Secret/ConfigMap create or update

- Mark envFrom configMapRef and secretRef as optional so the pod 

--- a/deploy/helm/chatcli/templates/deployment.yaml
+++ b/deploy/helm/chatcli/templates/deployment.yaml
@@ -11,6 +11,9 @@ spec:
       {{- include "chatcli.selectorLabels" . | nindent 6 }}
   template:
     metadata:
+      annotations:
+        checksum/config: {{ include (print $.Template.BasePath "/configmap.yaml") . | sha256sum }}
+        checksum/secret: {{ include (print $.Template.BasePath "/secret.yaml") . | sha256sum }}
       labels:
         {{- include "chatcli.selectorLabels" . | nindent 8 }}
     spec:
@@ -68,10 +71,14 @@ spec:
           envFrom:
             - configMapRef:
                 name: {{ include "chatcli.fullname" . }}
+                optional: true
             - secretRef:
                 name: {{ include "chatcli.secretName" . }}
-          {{- with .Values.extraEnv }}
+                optional: true
           env:
+            - name: HOME
+              value: /home/chatcli
+          {{- with .Values.extraEnv }}
             {{- toYaml . | nindent 12 }}
           {{- end }}
           {{- $mounts := list }}
@@ -86,6 +93,7 @@ spec:
           {{- end }}
           {{- if and .Values.securityContext .Values.securityContext.readOnlyRootFilesystem }}
           {{- $mounts = append $mounts (dict "name" "tmp" "mountPath" "/tmp") }}
+          {{- $mounts = append $mounts (dict "name" "data" "mountPath" "/home/chatcli/.chatcli") }}
           {{- end }}
           {{- if $mounts }}
           volumeMounts:
@@ -124,6 +132,9 @@ spec:
         - name: tmp
           emptyDir:
             sizeLimit: 100Mi
+        - name: data
+          emptyDir:
+            sizeLimit: 200Mi
         {{- end }}
       {{- end }}
       {{- with .Values.nodeSelector }}
