feat(operator): add remediation intelligence with runbook-first flow, K8s context enrichment and retry re-analysis
Implement a 5-phase improvement to the AIOps pipeline:

- Add KubernetesContextBuilder that collects real cluster state (deployment
  status, pod details, events, revision history) and sends it to the AI
  via new proto fields kubernetes_context and previous_failure_context
- Implement runbook-first remediation flow: manual Runbooks take precedence,
  AI actions are materialized as reusable auto-generated Runbook CRs
- Add tiered Runbook matching (SignalType+Severity+Kind preferred, then
  Severity+Kind fallback) with SignalType propagated from Anomaly to Issue
- Replace retry-same-strategy with re-analysis: failed attempts trigger AI
  re-analysis with failure evidence, forcing fundamentally different strategies
- Add dedup invalidation on terminal states (Resolved/Escalated) so
  recurring problems are detected immediately after resolution
- Enrich server AnalyzeIssue prompt with K8s context and failure history
- Update all documentation (READMEs, operator docs, ghpages)

--- a/operator/config/crd/bases/platform.chatcli.io_issues.yaml
+++ b/operator/config/crd/bases/platform.chatcli.io_issues.yaml
@@ -70,6 +70,9 @@ spec:
                     - logs
                     - webhook
                     - watcher
+                signalType:
+                  description: Type of signal that triggered the issue (e.g., pod_restart, oom_kill, error_rate).
+                  type: string
                 resource:
                   description: Reference to the Kubernetes resource affected.
                   type: object
