fix(rbac): grant Runbook CRD create/update/patch permissions to operator
Expand operator RBAC to allow creating, updating, and patching Runbook CRDs for auto-generated runbook functionality. Update Helm chart with equivalent permissions.

--- a/deploy/helm/chatcli/templates/rbac.yaml
+++ b/deploy/helm/chatcli/templates/rbac.yaml
@@ -27,6 +27,10 @@ rules:
   - apiGroups: [""]
     resources: ["pods", "pods/log", "events", "services", "endpoints", "namespaces"]
     verbs: ["get", "list", "watch"]
+  # Runbook CRD (controller creates auto-generated runbooks)
+  - apiGroups: [ "platform.chatcli.io" ]
+    resources: [ "runbooks" ]
+    verbs: [ "get", "list", "watch", "create", "update", "patch" ]
   # Apps resources
   - apiGroups: ["apps"]
     resources: ["deployments", "replicasets", "statefulsets", "daemonsets"]
@@ -73,6 +77,10 @@ rules:
   - apiGroups: [""]
     resources: ["pods", "pods/log", "events", "services", "endpoints"]
     verbs: ["get", "list", "watch"]
+  # Runbook CRD (controller creates auto-generated runbooks)
+  - apiGroups: [ "platform.chatcli.io" ]
+    resources: [ "runbooks" ]
+    verbs: [ "get", "list", "watch", "create", "update", "patch" ]
   # Apps resources
   - apiGroups: ["apps"]
     resources: ["deployments", "replicasets", "statefulsets", "daemonsets"]
